# Sitex

./: .gitignore  .replit  app_factory.py  create_admin.py  empleados_carga_masiva.csv  empleados_carga_masiva.xlsx  extensions.py  forms.py  generar_archivos_carga.py  main.py  mediciones_carga_masiva.csv  mediciones_carga_masiva.xlsx  models.py  pyproject.toml  requirements.txt  routes.py  seed_db.py  tanques_carga_masiva.csv  tanques_carga_masiva.xlsx  templates - Acceso directo.lnk  utils.py
attached_assets/: GasFleetManager_full_1758066655810.txt  README_1759418404171.md  app_factory_1759418487081.py  base_1759418502089.html  crear_tanque_1759418502101.html  dashboard_islero_1759418502102.html  empleados_1759418524048.html  empleados_1759418586021.html  forms_1759418404159.py  historial_1759418513337.html  login_1759418599171.html  models_1759418404170.py  register_1759418599172.html  registro_1759418513338.html  replit_1759418404172.md  sitex_prueba (2)_1759418404173.sql  sitex_prueba_1758066669298.sql  style_1759418613844.css  update_password_1759418599172.html
instance/: sitex_prueba.db
static/css/: style.css
templates/: base.html  dashboard_admin.html  privacidad.html  terminos.html
templates/admin/: carga_masiva.html  tanque_form.html
templates/auth/: change_password.html  login.html  register.html  request_reset.html  reset_password.html  update_password.html
templates/dashboard/: empleados.html  index.html  tanques.html
templates/medicion/: descargue.html  historial.html  historial_descargues.html  registro.html
